# liburlparser

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  common.h  main.cpp  next.config.js  noxfile.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: cmake.yml  docs.yml  nextjs.yml  wheels.yml
cmake/modules/: PyProject.cmake
components/: Container.tsx  DescriptionSection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  InstallationGuide.tsx  Navbar.tsx  PerformanceSection.tsx  SponsorSection.tsx  UsageExampleGuide.tsx
conda.recipe/: meta.yaml
docs/: Doxyfile.in
docs/cpp/: Doxyfile.in  annotated.html  annotated_dup.js  classTLD_1_1Host-members.html  classTLD_1_1Host.html  classTLD_1_1Host.js  classTLD_1_1Host__coll__graph.map  classTLD_1_1Host__coll__graph.md5  classTLD_1_1Url-members.html  classTLD_1_1Url.html  classTLD_1_1Url.js  classTLD_1_1Url__coll__graph.map  classTLD_1_1Url__coll__graph.md5  classes.html  dir_0ebdf2eeae62c464a0c7015a06dcee6a.html  dir_0ebdf2eeae62c464a0c7015a06dcee6a.js  dir_0ebdf2eeae62c464a0c7015a06dcee6a_dep.map  dir_0ebdf2eeae62c464a0c7015a06dcee6a_dep.md5  dir_49e56c817e5e54854c35e136979f97ca.html  dir_49e56c817e5e54854c35e136979f97ca.js  dir_5b281f84b2df35b33df74be975fd6c83.html  dir_5b281f84b2df35b33df74be975fd6c83.js  dir_5b281f84b2df35b33df74be975fd6c83_dep.map  dir_5b281f84b2df35b33df74be975fd6c83_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  header.html  index.html  index.js  interface-arch_8svg.html  mainpage.md  mainpage_8md.html  menudata.js  (+15 more)
docs/cpp/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  pages_0.js  (+3 more)
docs/python/: 404.html  examples.md  index.html  installation.md  mkdocs.yml  performance.md  search.html  sitemap.xml
docs/python/api/: host.md  url.md
docs/python/api/host/: index.html
docs/python/api/psl/: index.html
docs/python/api/url/: index.html
docs/python/docs/: index.md
docs/python/docs/api/: psl.md
docs/python/docs/usage/: advanced.md
docs/python/examples/: index.html
docs/python/installation/: index.html
docs/python/performance/: index.html
docs/python/search/: search_index.json
docs/python/usage/: basic.md  cli.md
docs/python/usage/advanced/: index.html
docs/python/usage/basic/: index.html
docs/python/usage/cli/: index.html
examples/: common.h  main.cpp
include/: urlparser.h
pages/: index.tsx
src/: psl.cpp  psl.h  url.cpp  url.h  urlparser.cpp  urlparser_host.cpp  urlparser_url.cpp
src/binding/: about.cpp  main.cpp
src/binding/bind_core/: main.cpp
src/full/: psl.cpp
src/liburlparser/: __init__.py  __main__.py  core.py  main.cpp  utils.py
styles/: global.css
tests/: test.cpp  test_extra.py  test_host.py  test_url.py
tests/cpp/: common.h  test_host.cpp  test_url.cpp
tests/data/: host_data.csv  url_data.csv
tests/python/: test_cli_subprocess.py  test_extra.py  test_host.py  test_url.py
